tests/paczka1/fuzzy1/49200509.err
Error in line 7: 07Kv A862 18,1
Error in line 5: A46 A862 81,8
Error in line 3: ziaOFM6k4s A862 9,7
Error in line 8: 07Kv A655 88,6
Error in line 9: A46 S401 39,4
Error in line 32: Lsi8LD S401 11,06
Error in line 29: eCF3Kz7CNw S401 68,7
